[B][COLOR red]Update - v4.2.7 - Nov. 06, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed TVShows Season level watched indicators.
    Previously the Season level did not refresh the cached
    watch status upon detection of a playcount change, this
    is now fixed.[/I]
[COLOR yellow]--[/COLOR][I] Added new startup service to detect a mismatch
    in the current reuselanguageinvoker setting vs. an update
    change.  Upon change detection user will be presented
    with the option to revert or accept the new setting.  Any
    change made and the users profile will be reloaded.
    There is no longer a need to restart Kodi as this is now
    done via reloading users profile.[/I]
[COLOR yellow]--[/COLOR][I] Added check for Google Drive account.  If present,
    and no debrid account exists, user will not longer be
    presented with a notification that a debrid account is
    required since these are direct playable links.[/I]
[COLOR yellow]--[/COLOR][I] New "traktSync.db" has been added. When user
    enables the "Trakt" category setting "Enable scrobbling",
    and also sets "Resume Point source" to "Trakt scrobbles",
    an initial sync will retrieve your complete Trakt Progress for
    all Movies and Shows.  At any time playback is stopped,
    before the normal 85% for "mark as watched", the
    scrobble pause will be saved to local db as well as sent
    to Trakt to maintain synchronization.  A service check is
    performed at 15 minute intervals to compare the latest
    "paused_at" db entry with that from the Trakt api.  This
    assures that another device in your home will get
    updated for changes.  This maintains sync across
    multiple devices.[/I]
[COLOR yellow]--[/COLOR][I] For the item above a new option has been added
    to the "Trakt Manager" called "Scrobble Reset".  This
    removes the given item from the local db and sends
    "progress=0" to Trakt "scrobble/start".  A 
    "container.refresh()" is then issued so 